Mise en place de la configuration et du Bootstrap

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,20 +1,77 @@
+; ---------------------------------------------------------------------
+; •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+; ••• PRODUCTION SETTINGS
+; •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+; ---------------------------------------------------------------------
+; • Default Zend settings
 [production]
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
-appnamespace = "Application"
+appnamespace = "App"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
+; •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+; ---------------------------------------------------------------------
+; •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+; • Gestion des modules
+; •• Front
+sites.0.host = fr.gite-luchon.com
+sites.0.locale = fr_FR
+sites.0.module = 1
+; •• Admin
+sites.1.host = admin.gite-luchon.com
+sites.1.locale = fr_FR
+sites.1.module = 2
+; ••••••••••••••••••••••••••••••••••
+; • Database
+; Global
+database.adapter = Pdo_Mysql
+database.adapterNamespace = Llv_Db_Pdo
+database.pdoType = "dblib"
+database.params.charset = UTF-8
+; Creditential
+database.params.host =
+database.params.port =
+database.params.username =
+database.params.password =
+database.params.dbname =
+; ••••••••••••••••••••••••••••••••••
+; • Projet
+project.servicesDirectory = APPLICATION_PATH . "/../library/Llv/Services/"
+ressources.modules[] = ""
+ressources.layout.layoutPath = APPLICATION_PATH . "/layouts/scripts/"
+ressources.frontController.moduleDirectory = APPLICATION_PATH . "/modules"
 
-[staging : production]
 
-[testing : production]
-phpSettings.display_startup_errors = 1
-phpSettings.display_errors = 1
 
-[development : production]
+
+; ---------------------------------------------------------------------
+; •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+; ••• DEVELOPMENT SETTINGS -> INHERITS PRODUCTION
+; •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+; ---------------------------------------------------------------------
+; • Default Zend settings
+[dev : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+; •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+; ---------------------------------------------------------------------
+; •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+; • Gestion des modules
+; •• Front
+sites.0.host = localhost:8888/clients/LLV/www/LLV-0.1.0/fr/
+; •• Admin
+sites.1.host = localhost:8888/clients/LLV/www/LLV-0.1.0/admin/
+; ••••••••••••••••••••••••••••••••••
+; • Database
+; Creditential
+database.params.host = localhost
+database.params.port = 8888
+database.params.username = llv
+database.params.password = N8rfgr76
+database.params.dbname = llv
+; •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
