Mise en place du contexte application et finalisation de la configuration de l'application # TODO : Initialiser l'environnement

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -20,11 +20,11 @@ resources.frontController.params.displayExceptions = 0
 ; •• Front
 sites.0.host = fr.gite-luchon.com
 sites.0.locale = fr_FR
-sites.0.module = 1
+sites.0.idModule = 1
 ; •• Admin
 sites.1.host = admin.gite-luchon.com
 sites.1.locale = fr_FR
-sites.1.module = 2
+sites.1.idModule = 2
 ; ••••••••••••••••••••••••••••••••••
 ; • Database
 ; Global
@@ -40,6 +40,7 @@ database.params.password =
 database.params.dbname =
 ; ••••••••••••••••••••••••••••••••••
 ; • Projet
+project.charset = UTF-8
 project.servicesDirectory = APPLICATION_PATH . "/../library/Llv/Services/"
 ressources.modules[] = ""
 ressources.layout.layoutPath = APPLICATION_PATH . "/layouts/scripts/"
@@ -63,9 +64,9 @@ resources.frontController.params.displayExceptions = 1
 ; •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
 ; • Gestion des modules
 ; •• Front
-sites.0.host = localhost:8888/clients/LLV/www/LLV-0.1.0/fr/
+sites.0.host = fr.giteluchon.dev
 ; •• Admin
-sites.1.host = localhost:8888/clients/LLV/www/LLV-0.1.0/admin/
+sites.1.host = back.giteluchon.dev
 ; ••••••••••••••••••••••••••••••••••
 ; • Database
 ; Creditential
