Finalisation de l'environnement de base - Installation des modules - Installation des locales

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -20,11 +20,11 @@ resources.frontController.params.displayExceptions = 0
 ; •• Front
 sites.0.host = fr.gite-luchon.com
 sites.0.locale = fr_FR
-sites.0.idModule = 1
+sites.0.idSite = 1
 ; •• Admin
-sites.1.host = admin.gite-luchon.com
+sites.1.host = back.gite-luchon.com
 sites.1.locale = fr_FR
-sites.1.idModule = 2
+sites.1.idSite = 2
 ; ••••••••••••••••••••••••••••••••••
 ; • Database
 ; Global
