--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,1 @@
-
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} -s [OR]
-RewriteCond %{REQUEST_FILENAME} -l [OR]
-RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^.*$ public/index.php [NC,L]
-RewriteRule ^.*$ - [NC,L]
+DirectoryIndex public/index.php
