--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,6 @@
-DirectoryIndex public/index.php
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} -s [OR]
+RewriteCond %{REQUEST_FILENAME} -l [OR]
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^.*$ - [NC,L]
+RewriteRule ^.*$ public/index.php [NC,L]
