--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -17,14 +17,21 @@ resources.frontController.params.displayExceptions = 0
 ; ---------------------------------------------------------------------
 ; •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
 ; • Gestion des modules
-; •• Front
+; •• Front FR
 sites.0.host = fr.gite-luchon.com
 sites.0.locale = fr_FR
 sites.0.idSite = 1
+sites.0.front = 1
 ; •• Admin
 sites.1.host = back.gite-luchon.com
 sites.1.locale = fr_FR
 sites.1.idSite = 2
+sites.1.front = 0
+; •• Front ES
+sites.2.host = es.gite-luchon.com
+sites.2.locale = es_ES
+sites.2.idSite = 1
+sites.2.front = 1
 ; ••••••••••••••••••••••••••••••••••
 ; • Database
 ; Global
@@ -65,10 +72,12 @@ resources.frontController.params.displayExceptions = 1
 ; ---------------------------------------------------------------------
 ; •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
 ; • Gestion des modules
-; •• Front
+; •• Front FR
 sites.0.host = fr.giteluchon.dev
 ; •• Admin
 sites.1.host = back.giteluchon.dev
+; •• Front ES
+sites.2.host = es.giteluchon.dev
 ; ••••••••••••••••••••••••••••••••••
 ; • Database
 ; Creditential
