--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -49,8 +49,9 @@ database.params.dbname =
 ; • Projet
 project.charset = UTF-8
 project.servicesDirectory = APPLICATION_PATH . "/../library/Llv/Services/"
-project.path.files.upload = APPLICATION_PATH "/../public/files/upload/
-project.path.files.download = APPLICATION_PATH "/../public/files/download/
+project.path.files.upload = APPLICATION_PATH "/../public/files/upload/"
+project.path.files.download = APPLICATION_PATH "/../public/files/download/"
+
 ressources.modules[] = ""
 ressources.layout.layoutPath = APPLICATION_PATH . "/layouts/scripts/"
 ressources.frontController.moduleDirectory = APPLICATION_PATH . "/modules"
