UI + Suppression logique d'élément du carrousel

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -51,6 +51,8 @@ project.charset = UTF-8
 project.servicesDirectory = APPLICATION_PATH . "/../library/Llv/Services/"
 project.path.files.upload = APPLICATION_PATH "/../public/files/upload/"
 project.path.files.download = APPLICATION_PATH "/../public/files/download/"
+project.url.files.upload = "/files/upload/"
+project.url.files.download = "/files/download/"
 
 ressources.modules[] = ""
 ressources.layout.layoutPath = APPLICATION_PATH . "/layouts/scripts/"
