--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -22,16 +22,27 @@ sites.0.host = fr.gite-luchon.com
 sites.0.locale = fr_FR
 sites.0.idSite = 1
 sites.0.front = 1
-; •• Admin
-sites.1.host = back.gite-luchon.com
-sites.1.locale = fr_FR
-sites.1.idSite = 2
-sites.1.front = 0
 ; •• Front ES
 sites.2.host = es.gite-luchon.com
 sites.2.locale = es_ES
 sites.2.idSite = 1
 sites.2.front = 1
+; •• Front EN
+sites.3.host = en.gite-luchon.com
+sites.3.locale = en_GB
+sites.3.idSite = 1
+sites.3.front = 1
+; •• Front EN
+sites.4.host = de.gite-luchon.com
+sites.4.locale = de_DE
+sites.4.idSite = 1
+sites.4.front = 1
+
+; •• Admin
+sites.1.host = back.gite-luchon.com
+sites.1.locale = fr_FR
+sites.1.idSite = 2
+sites.1.front = 0
 ; ••••••••••••••••••••••••••••••••••
 ; • Database
 ; Global
