Page de contact front

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -57,6 +57,9 @@ database.params.username =
 database.params.password =
 database.params.dbname =
 ; ••••••••••••••••••••••••••••••••••
+; • Clés plugin externes
+google.map.key = AIzaSyAjtEW4DoG0aOQWLlP2lgq9vLFJuWXcQVQ
+; ••••••••••••••••••••••••••••••••••
 ; • Projet
 project.charset = UTF-8
 project.servicesDirectory = APPLICATION_PATH . "/../library/Llv/Services/"
@@ -100,4 +103,7 @@ database.params.port = 8888
 database.params.username = llv
 database.params.password = N8rfgr76
 database.params.dbname = llv
+; ••••••••••••••••••••••••••••••••••
+; • Clés plugin externes
+google.map.key = AIzaSyAjtEW4DoG0aOQWLlP2lgq9vLFJuWXcQVQ
 ; •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
