Mise en ligne Bêta

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -36,7 +36,7 @@ sites.3.front = 1
 sites.4.host = de.gite-luchon.com
 sites.4.locale = de_DE
 sites.4.idSite = 1
-sites.4.front = 1
+sites.4.front = 0
 
 ; •• Admin
 sites.1.host = back.gite-luchon.com
@@ -51,11 +51,11 @@ database.adapterNamespace = Llv_Db_Pdo
 database.pdoType = "dblib"
 database.params.charset = UTF8
 ; Creditential
-database.params.host =
-database.params.port =
-database.params.username =
-database.params.password =
-database.params.dbname =
+database.params.host = "mysql5-13.60gp"
+database.params.port = ""
+database.params.dbname = "giteluch"
+database.params.username = "giteluch"
+database.params.password = "frederique"
 ; ••••••••••••••••••••••••••••••••••
 ; • Clés plugin externes
 google.map.key = AIzaSyAjtEW4DoG0aOQWLlP2lgq9vLFJuWXcQVQ
@@ -65,8 +65,8 @@ project.charset = UTF-8
 project.servicesDirectory = APPLICATION_PATH . "/../library/Llv/Services/"
 project.path.files.upload = APPLICATION_PATH "/../public/files/upload/"
 project.path.files.download = APPLICATION_PATH "/../public/files/download/"
-project.url.files.upload = "/files/upload/"
-project.url.files.download = "/files/download/"
+project.url.files.upload = "public/files/upload/"
+project.url.files.download = "public/files/download/"
 
 ressources.modules[] = ""
 ressources.layout.layoutPath = APPLICATION_PATH . "/layouts/scripts/"
@@ -100,9 +100,9 @@ sites.2.host = es.giteluchon.dev
 ; Creditential
 database.params.host = localhost
 database.params.port = 8888
-database.params.username = llv
+database.params.dbname = giteluch
+database.params.username = giteluch
 database.params.password = N8rfgr76
-database.params.dbname = llv
 ; ••••••••••••••••••••••••••••••••••
 ; • Clés plugin externes
 google.map.key = AIzaSyAjtEW4DoG0aOQWLlP2lgq9vLFJuWXcQVQ
