--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,21 @@
+#PROD
+SetEnv PHP_VER 5
+#Options -Indexes
+Options -Multiviews
+RewriteBase /public
+RewriteRule !\.(js|ico|gif|jpg|png|css)$ index.php
+
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} -s [OR]
 RewriteCond %{REQUEST_FILENAME} -l [OR]
 RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^.*$ - [NC,L]
-RewriteRule ^.*$ public/index.php [NC,L]
+RewriteRule ^.*$ - [NC,L] [L]
+RewriteRule ^.*$ index.php [L]
+
+#DEV
+#RewriteEngine On
+#RewriteCond %{REQUEST_FILENAME} -s [OR]
+#RewriteCond %{REQUEST_FILENAME} -l [OR]
+#RewriteCond %{REQUEST_FILENAME} -d
+#RewriteRule ^.*$ - [NC,L]
+#RewriteRule ^.*$ public/index.php [NC,L]
