--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -44,6 +44,9 @@ sites.1.locale = fr_FR
 sites.1.idSite = 2
 sites.1.front = 0
 ; ••••••••••••••••••••••••••••••••••
+i18n.csvSourcePath = APPLICATION_PATH "/../data/locales/src/"
+i18n.gettextTargetPath = APPLICATION_PATH "/../data/locales/"
+; ••••••••••••••••••••••••••••••••••
 ; • Database
 ; Global
 database.adapter = Pdo_Mysql
