--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,12 @@
 #PROD
 SetEnv PHP_VER 5
+SetEnv ZEND_OPTIMIZER 1
+SetEnv REGISTER_GLOBALS 0
+SetEnv MAGIC_QUOTES 0
+
 Options -Indexes
 Options -Multiviews
+
 RewriteBase /public
 RewriteRule !\.(js|ico|gif|jpg|png|css)$ index.php
 
@@ -19,3 +24,4 @@ RewriteRule ^.*$ index.php [L]
 #RewriteCond %{REQUEST_FILENAME} -d
 #RewriteRule ^.*$ - [NC,L]
 #RewriteRule ^.*$ public/index.php [NC,L]
+
