Modules de traduction Back + Correction anomalie ajout News/Activité

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -21,28 +21,47 @@ resources.frontController.params.displayExceptions = 0
 sites.0.host = fr.gite-luchon.com
 sites.0.locale = fr_FR
 sites.0.idSite = 1
-sites.0.front = 1
+sites.0.front = 0
+sites.8.host = www.gite-luchon.com
+sites.8.locale = fr_FR
+sites.8.idSite = 1
+sites.8.front = 1
 ; •• Front ES
-sites.2.host = es.gite-luchon.com
-sites.2.locale = es_ES
+sites.1.host = es.gite-luchon.com
+sites.1.locale = es_ES
+sites.1.idSite = 1
+sites.1.front = 0
+; •• Front EN
+sites.2.host = en.gite-luchon.com
+sites.2.locale = en_GB
 sites.2.idSite = 1
 sites.2.front = 1
-; •• Front EN
-sites.3.host = en.gite-luchon.com
-sites.3.locale = en_GB
+; •• Front DE
+sites.3.host = de.gite-luchon.com
+sites.3.locale = de_DE
 sites.3.idSite = 1
-sites.3.front = 1
-; •• Front EN
-sites.4.host = de.gite-luchon.com
-sites.4.locale = de_DE
-sites.4.idSite = 1
-sites.4.front = 0
+sites.3.front = 0
 
 ; •• Admin
-sites.1.host = back.gite-luchon.com
-sites.1.locale = fr_FR
-sites.1.idSite = 2
-sites.1.front = 0
+sites.4.host = back.gite-luchon.com
+sites.4.locale = fr_FR
+sites.4.idSite = 2
+sites.4.front = 0
+
+sites.5.host = back-es.gite-luchon.com
+sites.5.locale = es_ES
+sites.5.idSite = 2
+sites.5.front = 0
+
+sites.6.host = back-en.gite-luchon.com
+sites.6.locale = en_GB
+sites.6.idSite = 2
+sites.6.front = 0
+
+sites.7.host = back-de.gite-luchon.com
+sites.7.locale = de_DE
+sites.7.idSite = 2
+sites.7.front = 0
 ; ••••••••••••••••••••••••••••••••••
 i18n.csvSourcePath = APPLICATION_PATH "/../data/locales/src/"
 i18n.gettextTargetPath = APPLICATION_PATH "/../data/locales/"
