--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 #PROD
 SetEnv PHP_VER 5
+AddType x-mapp-php5 .php
 SetEnv ZEND_OPTIMIZER 1
 SetEnv REGISTER_GLOBALS 0
 SetEnv MAGIC_QUOTES 0
@@ -8,6 +9,7 @@ Options -Indexes
 Options -Multiviews
 
 RewriteBase /public
+RewriteRule ^robots.txt$ /public/referencement/robots.txt [L]
 RewriteRule !\.(js|ico|gif|jpg|png|css)$ index.php
 
 RewriteEngine On
@@ -16,12 +18,3 @@ RewriteCond %{REQUEST_FILENAME} -l [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^.*$ - [NC,L] [L]
 RewriteRule ^.*$ index.php [L]
-
-#DEV
-#RewriteEngine On
-#RewriteCond %{REQUEST_FILENAME} -s [OR]
-#RewriteCond %{REQUEST_FILENAME} -l [OR]
-#RewriteCond %{REQUEST_FILENAME} -d
-#RewriteRule ^.*$ - [NC,L]
-#RewriteRule ^.*$ public/index.php [NC,L]
-
